commit message validation

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,3 +4,9 @@
     entry: postgres
     types: [sql]
     language: script
+-   id: message
+    name: commit-message
+    description: "Validate commit message"
+    entry: message
+    stages: commit-msg
+    language: script
